--- a/css/style.css
+++ b/css/style.css
@@ -1,45 +1,19 @@
-body {
-  margin: 0;
-  padding: 0;
-}
-.sidebar {
-  grid-area: sidebar;
-  background: #b1b3b7;
-  height: 100%;
-  min-height: 85vh;
-}
-.sidebar ul {
-  list-style-type: none;
-  margin: 0px;
-  padding: 0px;
-}
-.contentBox {
-  grid-area: contentBox;
-  position: relative;
-  height: 99%;
-}
-
-.header {
-  grid-area: header;
-
-}
-.header a {
-    color:#fff;
-    text-decoration: auto;
-}
-.footer {
-  grid-area: footer;
-  text-align: center;
-}
-
+@import "media.css";
+@import "social.css";
+@import "main.css";
+@import "blog.css";
 
 .box.header header {
   display: flex;
   justify-content: space-between;
   align-items: baseline;
 }
+header > div {
+  white-space: nowrap;
+}
 .box.header a {
   padding: 5px;
+  display: inline;
 }
 .wrapper {
   display: grid;
@@ -56,7 +30,6 @@ body {
 .box {
   padding: 10px;
   min-width: fit-content;
-
 }
 .header {
   height: 50px;
@@ -79,112 +52,3 @@ body {
   flex-wrap: wrap;
 }
 
-.content .blog-box {
-  /* border: 2px solid #393e4d; */
-  background-color: #fff;
-  color: blue;
-  max-width: 29%;
-  min-width: 29%;
-  margin: 10px;
-  padding: 10px;
-  box-shadow: 3px 5px 12px -4px rgb(0 0 0 / 28%);
-  -webkit-box-shadow: 3px 5px 12px -4px rgb(0 0 0 / 28%);
-  -moz-box-shadow: 3px 5px 12px -4px rgb(0 0 0 / 28%);
-}
-
-.content .body-box {
-  background-color: #ecec;
-}
-
-nav {
-  background-color: #b1b3b7;
-  padding: 5px;
-}
-
-.title {
-  font-size: 2rem;
-  width: 100%;
-  height: 40px;
-}
-
-.links {
-  list-style: none;
-}
-
-.links li {
-  padding: 5px 2px;
-}
-
-.blog img {
-  max-height: 600px;
-}
-
-.img-box {
-  display: flex;
-  justify-content: center;
-  font-size: x-small;
- 
-}
-
- .img-box .small-img {
-  max-height: 80px;
-  /* max-width: 100px; */
-}
-
-.inner-box {
-  background-color: #ecec;
-}
-
-.header .flex {
-  display: flex;
-  align-items: baseline;
-}
-
-.flex-grow {
-  flex-grow: 1;
-
-}
-
-.nav-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-.nav-ul li {
-  display: inline-block;
-  padding: 0 5px;
-}
-
-.at-share-btn-elements a {
-  display: inline-block;
-  height: 45px;
-  color: #fff;
-  padding: 0 5px;
-}
-
-.about-author {
-  border: 1px solid #e2e2e2;
-  padding: 1rem;
-}
-
-.post-title {
-  font-size: 2rem;
-}
-
-.post-title h1 {
-  margin: 0px;
-}
-
-aside {
-  width: 40%;
-  padding-left: .5rem;
-  margin-left: .5rem;
-  float: right;
-  box-shadow: inset 5px 0 5px -5px #29627e;
-  font-style: italic;
-  color: #29627e;
-}
-
-p {
-  
-}
