--- a/css/style.css
+++ b/css/style.css
@@ -28,8 +28,11 @@ header > div {
 }
 
 .box {
-  padding: 10px;
+  padding: 0px;
   min-width: fit-content;
+}
+header h1 {
+  margin: 0px;
 }
 .header {
   height: 50px;
@@ -44,7 +47,9 @@ header > div {
   min-width: 150px;
   height: calc(100vh - 100px);
 }
-
+.sidebar ul {
+  margin: 10px;
+}
 .content {
   flex-grow: 1;
   /* flex-direction: column; */
@@ -52,3 +57,6 @@ header > div {
   flex-wrap: wrap;
 }
 
+.content > div {
+  margin: 10px;
+}
